--- a/1.1/PA1.1.ipynb
+++ b/1.1/PA1.1.ipynb
@@ -48,7 +48,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.10.0-cp310-cp310-win_amd64.whl.metadata (11 kB)\n",
+      "Collecting numpy\n",
+      "  Downloading numpy-2.2.3-cp310-cp310-win_amd64.whl.metadata (60 kB)\n",
+      "Collecting nltk\n",
+      "  Downloading nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
+      "  Downloading contourpy-1.3.1-cp310-cp310-win_amd64.whl.metadata (5.4 kB)\n",
+      "Collecting cycler>=0.10 (from matplotlib)\n",
+      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
+      "  Downloading fonttools-4.56.0-cp310-cp310-win_amd64.whl.metadata (103 kB)\n",
+      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
+      "  Downloading kiwisolver-1.4.8-cp310-cp310-win_amd64.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\aminq\\documents\\github\\generativeai\\1.1\\.venv\\lib\\site-packages (from matplotlib) (24.2)\n",
+      "Collecting pillow>=8 (from matplotlib)\n",
+      "  Downloading pillow-11.1.0-cp310-cp310-win_amd64.whl.metadata (9.3 kB)\n",
+      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
+      "  Downloading pyparsing-3.2.1-py3-none-any.whl.metadata (5.0 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\aminq\\documents\\github\\generativeai\\1.1\\.venv\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Collecting click (from nltk)\n",
+      "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting joblib (from nltk)\n",
+      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting regex>=2021.8.3 (from nltk)\n",
+      "  Downloading regex-2024.11.6-cp310-cp310-win_amd64.whl.metadata (41 kB)\n",
+      "Collecting tqdm (from nltk)\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\aminq\\documents\\github\\generativeai\\1.1\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\aminq\\documents\\github\\generativeai\\1.1\\.venv\\lib\\site-packages (from click->nltk) (0.4.6)\n",
+      "Downloading matplotlib-3.10.0-cp310-cp310-win_amd64.whl (8.0 MB)\n",
+      "   ---------------------------------------- 0.0/8.0 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.3/8.0 MB ? eta -:--:--\n",
+      "   -- ------------------------------------- 0.5/8.0 MB 1.7 MB/s eta 0:00:05\n",
+      "   --- ------------------------------------ 0.8/8.0 MB 1.5 MB/s eta 0:00:05\n",
+      "   --- ------------------------------------ 0.8/8.0 MB 1.5 MB/s eta 0:00:05\n",
+      "   ------- -------------------------------- 1.6/8.0 MB 1.5 MB/s eta 0:00:05\n",
+      "   --------- ------------------------------ 1.8/8.0 MB 1.5 MB/s eta 0:00:05\n",
+      "   ---------- ----------------------------- 2.1/8.0 MB 1.5 MB/s eta 0:00:04\n",
+      "   ----------- ---------------------------- 2.4/8.0 MB 1.5 MB/s eta 0:00:04\n",
+      "   ------------- -------------------------- 2.6/8.0 MB 1.5 MB/s eta 0:00:04\n",
+      "   --------------- ------------------------ 3.1/8.0 MB 1.5 MB/s eta 0:00:04\n",
+      "   ---------------- ----------------------- 3.4/8.0 MB 1.5 MB/s eta 0:00:04\n",
+      "   ------------------ --------------------- 3.7/8.0 MB 1.4 MB/s eta 0:00:04\n",
+      "   ------------------- -------------------- 3.9/8.0 MB 1.5 MB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 4.2/8.0 MB 1.5 MB/s eta 0:00:03\n",
+      "   ----------------------- ---------------- 4.7/8.0 MB 1.5 MB/s eta 0:00:03\n",
+      "   ------------------------ --------------- 5.0/8.0 MB 1.5 MB/s eta 0:00:03\n",
+      "   -------------------------- ------------- 5.2/8.0 MB 1.5 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 5.2/8.0 MB 1.5 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 5.8/8.0 MB 1.4 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 5.8/8.0 MB 1.4 MB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 5.8/8.0 MB 1.4 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 6.3/8.0 MB 1.3 MB/s eta 0:00:02\n",
+      "   ------------------------------- -------- 6.3/8.0 MB 1.3 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 6.6/8.0 MB 1.3 MB/s eta 0:00:02\n",
+      "   -------------------------------- ------- 6.6/8.0 MB 1.3 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 6.8/8.0 MB 1.2 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 7.1/8.0 MB 1.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 7.3/8.0 MB 1.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 7.6/8.0 MB 1.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  7.9/8.0 MB 1.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 8.0/8.0 MB 1.2 MB/s eta 0:00:00\n",
+      "Downloading numpy-2.2.3-cp310-cp310-win_amd64.whl (12.9 MB)\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.3/12.9 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.5/12.9 MB 1.5 MB/s eta 0:00:09\n",
+      "   -- ------------------------------------- 0.8/12.9 MB 1.5 MB/s eta 0:00:08\n",
+      "   --- ------------------------------------ 1.0/12.9 MB 1.4 MB/s eta 0:00:09\n",
+      "   ---- ----------------------------------- 1.3/12.9 MB 1.4 MB/s eta 0:00:09\n",
+      "   ----- ---------------------------------- 1.8/12.9 MB 1.5 MB/s eta 0:00:08\n",
+      "   ------ --------------------------------- 2.1/12.9 MB 1.4 MB/s eta 0:00:08\n",
+      "   ------- -------------------------------- 2.4/12.9 MB 1.4 MB/s eta 0:00:08\n",
+      "   -------- ------------------------------- 2.6/12.9 MB 1.4 MB/s eta 0:00:08\n",
+      "   -------- ------------------------------- 2.9/12.9 MB 1.4 MB/s eta 0:00:08\n",
+      "   --------- ------------------------------ 3.1/12.9 MB 1.4 MB/s eta 0:00:07\n",
+      "   ----------- ---------------------------- 3.7/12.9 MB 1.4 MB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 3.9/12.9 MB 1.4 MB/s eta 0:00:07\n",
+      "   ------------ --------------------------- 4.2/12.9 MB 1.4 MB/s eta 0:00:07\n",
+      "   ------------- -------------------------- 4.5/12.9 MB 1.4 MB/s eta 0:00:06\n",
+      "   -------------- ------------------------- 4.7/12.9 MB 1.4 MB/s eta 0:00:06\n",
+      "   ---------------- ----------------------- 5.2/12.9 MB 1.4 MB/s eta 0:00:06\n",
+      "   ----------------- ---------------------- 5.5/12.9 MB 1.4 MB/s eta 0:00:06\n",
+      "   ----------------- ---------------------- 5.8/12.9 MB 1.4 MB/s eta 0:00:05\n",
+      "   ------------------ --------------------- 6.0/12.9 MB 1.4 MB/s eta 0:00:05\n",
+      "   ------------------- -------------------- 6.3/12.9 MB 1.4 MB/s eta 0:00:05\n",
+      "   --------------------- ------------------ 6.8/12.9 MB 1.5 MB/s eta 0:00:05\n",
+      "   --------------------- ------------------ 7.1/12.9 MB 1.4 MB/s eta 0:00:05\n",
+      "   ---------------------- ----------------- 7.3/12.9 MB 1.5 MB/s eta 0:00:04\n",
+      "   ----------------------- ---------------- 7.6/12.9 MB 1.5 MB/s eta 0:00:04\n",
+      "   ------------------------ --------------- 7.9/12.9 MB 1.4 MB/s eta 0:00:04\n",
+      "   ------------------------- -------------- 8.1/12.9 MB 1.4 MB/s eta 0:00:04\n",
+      "   ------------------------- -------------- 8.4/12.9 MB 1.4 MB/s eta 0:00:04\n",
+      "   ------------------------- -------------- 8.4/12.9 MB 1.4 MB/s eta 0:00:04\n",
+      "   ------------------------- -------------- 8.4/12.9 MB 1.4 MB/s eta 0:00:04\n",
+      "   -------------------------- ------------- 8.7/12.9 MB 1.3 MB/s eta 0:00:04\n",
+      "   -------------------------- ------------- 8.7/12.9 MB 1.3 MB/s eta 0:00:04\n",
+      "   --------------------------- ------------ 8.9/12.9 MB 1.3 MB/s eta 0:00:04\n",
+      "   ---------------------------- ----------- 9.2/12.9 MB 1.3 MB/s eta 0:00:03\n",
+      "   ----------------------------- ---------- 9.4/12.9 MB 1.3 MB/s eta 0:00:03\n",
+      "   ------------------------------ --------- 9.7/12.9 MB 1.3 MB/s eta 0:00:03\n",
+      "   ------------------------------ --------- 10.0/12.9 MB 1.3 MB/s eta 0:00:03\n",
+      "   ------------------------------- -------- 10.2/12.9 MB 1.3 MB/s eta 0:00:03\n",
+      "   -------------------------------- ------- 10.5/12.9 MB 1.3 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 10.7/12.9 MB 1.3 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 10.7/12.9 MB 1.3 MB/s eta 0:00:02\n",
+      "   --------------------------------- ------ 10.7/12.9 MB 1.3 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 11.0/12.9 MB 1.2 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 11.0/12.9 MB 1.2 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 11.3/12.9 MB 1.2 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 11.3/12.9 MB 1.2 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ----- 11.3/12.9 MB 1.2 MB/s eta 0:00:02\n",
+      "   ----------------------------------- ---- 11.5/12.9 MB 1.1 MB/s eta 0:00:02\n",
+      "   ------------------------------------ --- 11.8/12.9 MB 1.1 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.3/12.9 MB 1.1 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.6/12.9 MB 1.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  12.8/12.9 MB 1.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.9/12.9 MB 1.1 MB/s eta 0:00:00\n",
+      "Downloading nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
+      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
+      "   ------ --------------------------------- 0.3/1.5 MB ? eta -:--:--\n",
+      "   ------------- -------------------------- 0.5/1.5 MB 1.5 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 0.8/1.5 MB 1.5 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 1.0/1.5 MB 1.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.5/1.5 MB 1.4 MB/s eta 0:00:00\n",
+      "Downloading contourpy-1.3.1-cp310-cp310-win_amd64.whl (218 kB)\n",
+      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Downloading fonttools-4.56.0-cp310-cp310-win_amd64.whl (2.2 MB)\n",
+      "   ---------------------------------------- 0.0/2.2 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 0.3/2.2 MB ? eta -:--:--\n",
+      "   --------- ------------------------------ 0.5/2.2 MB 1.5 MB/s eta 0:00:02\n",
+      "   -------------- ------------------------- 0.8/2.2 MB 1.5 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 1.0/2.2 MB 1.5 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 1.6/2.2 MB 1.5 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 1.8/2.2 MB 1.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.2/2.2 MB 1.5 MB/s eta 0:00:00\n",
+      "Downloading kiwisolver-1.4.8-cp310-cp310-win_amd64.whl (71 kB)\n",
+      "Downloading pillow-11.1.0-cp310-cp310-win_amd64.whl (2.6 MB)\n",
+      "   ---------------------------------------- 0.0/2.6 MB ? eta -:--:--\n",
+      "   --- ------------------------------------ 0.3/2.6 MB ? eta -:--:--\n",
+      "   ------- -------------------------------- 0.5/2.6 MB 1.4 MB/s eta 0:00:02\n",
+      "   ----------- ---------------------------- 0.8/2.6 MB 1.5 MB/s eta 0:00:02\n",
+      "   --------------- ------------------------ 1.0/2.6 MB 1.5 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 1.3/2.6 MB 1.5 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 1.6/2.6 MB 1.4 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 2.1/2.6 MB 1.4 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 2.4/2.6 MB 1.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.6/2.6 MB 1.4 MB/s eta 0:00:00\n",
+      "Downloading pyparsing-3.2.1-py3-none-any.whl (107 kB)\n",
+      "Downloading regex-2024.11.6-cp310-cp310-win_amd64.whl (274 kB)\n",
+      "Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
+      "Downloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: tqdm, regex, pyparsing, pillow, numpy, kiwisolver, joblib, fonttools, cycler, click, nltk, contourpy, matplotlib\n",
+      "Successfully installed click-8.1.8 contourpy-1.3.1 cycler-0.12.1 fonttools-4.56.0 joblib-1.4.2 kiwisolver-1.4.8 matplotlib-3.10.0 nltk-3.9.1 numpy-2.2.3 pillow-11.1.0 pyparsing-3.2.1 regex-2024.11.6 tqdm-4.67.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install matplotlib numpy nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:37.898239Z",
@@ -59,7 +230,17 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\aminq\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import in the libraries\n",
     "# Note: you are NOT allowed to use any other libraries or functions outside of these\n",
@@ -71,9 +252,10 @@
     "from typing import List, Union\n",
     "\n",
     "import numpy as np\n",
+    "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "nltk.download('punkt_tab')\n",
     "np.random.seed(22)\n",
     "random.seed(22)"
    ]
@@ -122,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "trusted": true
    },
@@ -152,7 +334,7 @@
        "1025058"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,20 +350,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of tokens in dataset: 209939\n",
+      "Vocabulary size: 8413\n"
+     ]
+    }
+   ],
    "source": [
     "class Dataset:\n",
     "\n",
     "    def __init__(self, data: str):\n",
+    "        self.data = data\n",
+    "        self.data = re.sub('[,!?;-]','.',self.data)\n",
+    "        self.tokens = word_tokenize(self.data)\n",
+    "        self.tokens = [token.lower() for token in self.tokens if token.isalpha() or token == '.']\n",
+    "        self.vocab = sorted(list(set(self.tokens)))\n",
+    "        self.vocab_size = len(self.vocab)\n",
+    "        self.stoi = {word:index for index, word in enumerate(self.vocab)}\n",
+    "        self.itos = {index:word for index, word in enumerate(self.vocab)}\n",
     "        \n",
-    "        ## Your code here\n",
-    "        \n",
-    "        ## --\n",
-    "    \n",
     "    def __len__(self):\n",
     "        return len(self.tokens)\n",
     "\n",
@@ -735,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
