--- a/1.1/PA1.1.ipynb
+++ b/1.1/PA1.1.ipynb
@@ -422,11 +422,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'how', 'you', '.'] ---> are\n",
+      "['how', 'are', '.', 'i'] ---> you\n",
+      "['are', 'you', 'i', 'am'] ---> .\n",
+      "['you', '.', 'am', 'under'] ---> i\n",
+      "['.', 'i', 'under', 'the'] ---> am\n",
+      "['i', 'am', 'the', 'water'] ---> under\n",
+      "['am', 'under', 'water', '.'] ---> the\n",
+      "['under', 'the', '.', 'please'] ---> water\n",
+      "['the', 'water', 'please', 'help'] ---> .\n",
+      "['water', '.', 'help', 'me'] ---> please\n",
+      "['.', 'please', 'me', '.'] ---> help\n",
+      "Test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def get_windows(\n",
     "        data: List[Union[str, int]], \n",
@@ -499,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:43.843430Z",
@@ -527,7 +546,7 @@
     "\n",
     "            if sample_word != to_exclude:\n",
     "\n",
-    "             return sample_word"
+    "                return sample_word"
    ]
   },
   {
@@ -580,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:43.867833Z",
@@ -624,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:43.893173Z",
@@ -646,10 +665,9 @@
     "                 vocab_size : int, \n",
     "                 stoi : dict, \n",
     "                 emb_dim : int):\n",
-    "\n",
-    "        ## Your code here\n",
-    "        \n",
-    "        ## --\n",
+    "        self.stoi = stoi\n",
+    "        self.W = np.random.random((vocab_size, emb_dim))\n",
+    "        self.C = np.random.random((vocab_size, emb_dim))\n",
     "\n",
     "    def __call__(self, x : int):\n",
     "        return (self.W[x] + self.C[x]) / 2\n",
@@ -673,10 +691,8 @@
     "        for epoch in range(num_epochs):\n",
     "\n",
     "            epoch_loss = 0.0\n",
-    "\n",
-    "            ## Your code here\n",
-    "            \n",
-    "            ## --             \n",
+    "            for context, target in zip(context_words, target_words):\n",
+    "                \n",
     "\n",
     "            epoch_loss = epoch_loss / len(target_words)\n",
     "            print(f\"Epoch {epoch+1}/{num_epochs} - Loss: {epoch_loss:.3f}\")\n",
@@ -687,6 +703,30 @@
     "w2v_model = word2vec(vocab_size=dataset.vocab_size,\n",
     "                     stoi=dataset.stoi,\n",
     "                     emb_dim=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(['tolkien', 'the', 'lord', 'the', 'rings', '.'], 'of'),\n",
+       " (['the', 'lord', 'of', 'rings', '.', 'the'], 'the'),\n",
+       " (['lord', 'of', 'the', '.', 'the', 'lord'], 'rings'),\n",
+       " (['of', 'the', 'rings', 'the', 'lord', 'of'], '.'),\n",
+       " (['the', 'rings', '.', 'lord', 'of', 'the'], 'the')]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(ctx, trgt) for ctx, trgt in zip(context_words, target_words)][:5]"
    ]
   },
   {
