--- a/1.1/PA1.1.ipynb
+++ b/1.1/PA1.1.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:37.898239Z",
@@ -230,17 +230,7 @@
     },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\aminq\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import in the libraries\n",
     "# Note: you are NOT allowed to use any other libraries or functions outside of these\n",
@@ -255,7 +245,7 @@
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "import matplotlib.pyplot as plt\n",
-    "nltk.download('punkt_tab')\n",
+    "#nltk.download('punkt_tab')\n",
     "np.random.seed(22)\n",
     "random.seed(22)"
    ]
@@ -304,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "trusted": true
    },
@@ -334,7 +324,7 @@
        "1025058"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "trusted": true
    },
@@ -422,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "trusted": true
    },
@@ -518,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:43.843430Z",
@@ -599,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-18T18:57:43.867833Z",
@@ -639,6 +629,36 @@
     "    <li>If you're running into overflows/underflows or numerical instability, there is something wrong with your implementation. If you're sure everything is correct, double-check your equations with the lecture slides - one wrong sign for a gradient cost me an hour of debugging ;-;</li>\n",
     "</ul>\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = np.array([[1,2,3,4],[5,6,7,8],[9,10,11,12]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -1,  -2,  -3,  -4],\n",
+       "       [ -9, -10, -11, -12]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-v[[0,2]]"
    ]
   },
   {
@@ -692,7 +712,25 @@
     "\n",
     "            epoch_loss = 0.0\n",
     "            for context, target in zip(context_words, target_words):\n",
-    "                \n",
+    "                for input_word in context:\n",
+    "                    negative_sampals = [sample_neg_word(input_word,dataset.vocab) for _ in range(K)]\n",
+    "                    negative_sampals_indices = self.encode(negative_sampals)\n",
+    "                    input_word_index = self.encode(input_word)\n",
+    "                    target_index = self.encode(target)\n",
+    "\n",
+    "                    c_pos = self.W[input_word_index]\n",
+    "                    c_neg = self.C[negative_sampals_indices]\n",
+    "                    w = self.C(target_index)\n",
+    "                    print(f'C_pos: {c_pos.shape}, C_neg: {c_neg.shape}, w: {w.shape}')\n",
+    "                    c_pos_w_dot = np.dot(c_pos,w)\n",
+    "                    c_neg_w_dot = np.dot(c_neg,w)\n",
+    "                    L_CE = -np.log(sigmoid(c_pos_w_dot)) - np.sum(np.log(sigmoid(-c_neg_w_dot)))\n",
+    "                    epoch_loss+=L_CE\n",
+    "                    d_lce_w = (sigmoid(c_pos_w_dot)-1) * c_pos + np.sum(sigmoid(c_neg_w_dot)*c_neg)\n",
+    "                    d_lce_cpos = (sigmoid(c_pos_w_dot)-1) * w\n",
+    "                    d_lce_cneg = sigmoid(c_neg_w_dot) * w\n",
+    "\n",
+    "                    \n",
     "\n",
     "            epoch_loss = epoch_loss / len(target_words)\n",
     "            print(f\"Epoch {epoch+1}/{num_epochs} - Loss: {epoch_loss:.3f}\")\n",
@@ -970,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
