--- a/4/24280005_PA4.ipynb
+++ b/4/24280005_PA4.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "03b1bd40",
       "metadata": {
         "colab": {
@@ -58,45 +58,7 @@
         "id": "03b1bd40",
         "outputId": "827c9b65-a160-4970-b14f-67325123ffb7"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: datasets in /usr/local/lib/python3.11/dist-packages (3.5.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from datasets) (3.18.0)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.11/dist-packages (from datasets) (2.0.2)\n",
-            "Requirement already satisfied: pyarrow>=15.0.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (18.1.0)\n",
-            "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.3.8)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from datasets) (2.2.2)\n",
-            "Requirement already satisfied: requests>=2.32.2 in /usr/local/lib/python3.11/dist-packages (from datasets) (2.32.3)\n",
-            "Requirement already satisfied: tqdm>=4.66.3 in /usr/local/lib/python3.11/dist-packages (from datasets) (4.67.1)\n",
-            "Requirement already satisfied: xxhash in /usr/local/lib/python3.11/dist-packages (from datasets) (3.5.0)\n",
-            "Requirement already satisfied: multiprocess<0.70.17 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.70.16)\n",
-            "Requirement already satisfied: fsspec<=2025.3.0,>=2023.1.0 in /usr/local/lib/python3.11/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2025.3.0)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.11/dist-packages (from datasets) (3.11.15)\n",
-            "Requirement already satisfied: huggingface-hub>=0.24.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.30.2)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from datasets) (24.2)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.11/dist-packages (from datasets) (6.0.2)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (2.6.1)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.3.2)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (25.3.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.6.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (6.4.3)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (0.3.1)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.20.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.24.0->datasets) (4.13.2)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (3.4.1)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2.4.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2025.4.26)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "pip install datasets"
       ]
@@ -1865,9 +1827,16 @@
       "source": [
         "Comment on your observations:\n",
         "\n",
-        "* Policy model's outputs are coherent, but it hallucinates a bit like *\"Oh, that's true. But even though we were thinking about getting married, our kids still wanted to spend time with us. What could we do to console them?\"* when the prompt was **\"They never had kids so my siblings and I are pretty important to them.\"**\n",
-        "\n",
-        "* The reference model also showed a little weirdness with the 3rd prompt about soap opera: **\"General Hospital is still airing. As the World Turns went off a long time ago though.\"**, to which it responded: *\"Coronation Street is still airing today. As the World Turns was airing in 1960, it was airing in 1961, and it was airing in 1962.\"*"
+        "<ul style=\"color:green\">\n",
+        "<li>\n",
+        "Policy model's outputs are coherent, but it hallucinates a bit like <i>\"Oh, that's true. But even though we were thinking about getting married, our kids still wanted to spend time with us. What could we do to console them?\"</i> when the prompt was <b>\"They never had kids so my siblings and I are pretty important to them.\"</b>\n",
+        "</li>\n",
+        "</br>\n",
+        "<li>\n",
+        "The reference model also showed a little weirdness with the 3rd prompt about soap opera: <b>\"General Hospital is still airing. As the World Turns went off a long time ago though.\"</b>, to which it responded: <i>\"Coronation Street is still airing today. As the World Turns was airing in 1960, it was airing in 1961, and it was airing in 1962.\"</i>\n",
+        "</li>\n",
+        "</ul>\n",
+        "</p>"
       ]
     },
     {
@@ -1920,12 +1889,6 @@
         "The only problem i faced was the gibberish output from the policy model - it was repeating the same word in all its responses: <i>the the the the . . .</i>; I tried lowering β from 0.1 to 0.001 in both train and test dpo losses, and learning rate from 0.0003 to 0.0001. Doing this fixed the issue, made the outputs more coherent and relevant to the prompt, with a few minor typos occasionally.\n",
         "</p>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "e2506fdd",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
